--- a/DevSandbox/LaunchScreen.storyboard
+++ b/DevSandbox/LaunchScreen.storyboard
@@ -1,70 +1,41 @@
-﻿<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document
-	type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB"
-	version="3.0"
-	toolsVersion="9532"
-	systemVersion="15D21"
-	targetRuntime="iOS.CocoaTouch"
-	propertyAccessControl="none"
-	useAutolayout="YES"
-	launchScreen="YES"
-	useTraitCollections="YES"
-	initialViewController="01J-lp-oVM">
-	<dependencies>
-		<deployment
-			identifier="iOS" />
-		<plugIn
-			identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin"
-			version="9530" />
-	</dependencies>
-	<scenes>
-		<!--View Controller-->
-		<scene
-			sceneID="EHf-IW-A2E">
-			<objects>
-				<viewController
-					id="01J-lp-oVM"
-					sceneMemberID="viewController">
-					<layoutGuides>
-						<viewControllerLayoutGuide
-							type="top"
-							id="Llm-lL-Icb" />
-						<viewControllerLayoutGuide
-							type="bottom"
-							id="xb3-aO-Qok" />
-					</layoutGuides>
-					<view
-						key="view"
-						contentMode="scaleToFill"
-						id="Ze5-6b-2t3">
-						<rect
-							key="frame"
-							x="0.0"
-							y="0.0"
-							width="600"
-							height="600" />
-						<autoresizingMask
-							key="autoresizingMask"
-							widthSizable="YES"
-							heightSizable="YES" />
-						<color
-							key="backgroundColor"
-							white="1"
-							alpha="1"
-							colorSpace="custom"
-							customColorSpace="calibratedWhite" />
-					</view>
-				</viewController>
-				<placeholder
-					placeholderIdentifier="IBFirstResponder"
-					id="iYj-Kq-Ea1"
-					userLabel="First Responder"
-					sceneMemberID="firstResponder" />
-			</objects>
-			<point
-				key="canvasLocation"
-				x="53"
-				y="375" />
-		</scene>
-	</scenes>
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
+    <dependencies>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+    </dependencies>
+    <scenes>
+        <!--View Controller-->
+        <scene sceneID="EHf-IW-A2E">
+            <objects>
+                <viewController id="01J-lp-oVM" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Llm-lL-Icb"/>
+                        <viewControllerLayoutGuide type="bottom" id="xb3-aO-Qok"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Developer Sandbox" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3">
+                                <rect key="frame" x="10" y="224" width="580" height="42"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="42" id="7"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="3" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" constant="10" id="4"/>
+                            <constraint firstItem="3" firstAttribute="trailing" secondItem="Ze5-6b-2t3" secondAttribute="trailing" constant="-10" id="6"/>
+                            <constraint firstItem="3" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="204" id="8"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="53" y="375"/>
+        </scene>
+    </scenes>
 </document>
